Fixing positioning of mobile menu in rtl on firefox

--- a/src/navigation/mobile-menu.scss
+++ b/src/navigation/mobile-menu.scss
@@ -18,6 +18,7 @@
 }
 
 [dir='rtl'] .d2l-navigation-s-mobile-menu-content {
+	left: auto;
 	right: 0;
 	transform: translateX(100%);
 }
